--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "appwrite": "^17.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.0.6"
   },
